yamls/nginx-volume.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      release: dev
  template:
    metadata:
      labels:
        app: nginx
        release: dev
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
        - name: dynamic-pvc
          mountPath: "/tmp/"
      volumes:
      - name: dynamic-pvc
        persistentVolumeClaim:
           claimName: nfs-sc
