yamls/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: www.lin.nginx
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
